# bolt-serializer

./: CMakeLists.txt  SerializerLib.cmake  example.txt  main.cpp
src/: attribute_tree.cpp  attribute_tree.hpp  binary_serializer.cpp  binary_serializer.hpp  lexer.cpp  lexer.hpp  parser.cpp  parser.hpp  plain_serializer.cpp  plain_serializer.hpp  serializable.hpp  serializer.hpp
